// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Test Buttons Components - Experimental Enabled ButtonLink Snapshot 1`] = `
<View
  accessibilityLabel="label"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 14,
      "left": 24,
      "right": 24,
      "top": 14,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "flex-start",
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "overflow": "hidden",
          "textAlignVertical": "center",
        },
        {
          "paddingHorizontal": 0,
        },
        {
          "backgroundColor": "transparent",
          "borderColor": "#0B3EE3",
          "borderRadius": 8,
          "borderWidth": 0,
          "height": undefined,
        },
        {},
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "overflow": "hidden",
          "textAlignVertical": "center",
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        {},
        {
          "paddingHorizontal": 0,
        },
        {
          "backgroundColor": "transparent",
          "borderColor": "#0B3EE3",
          "borderRadius": 8,
          "borderWidth": 0,
          "height": undefined,
        },
        {},
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          {
            "columnGap": 8,
          },
          false,
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          {
            "columnGap": 8,
          },
          false,
        ]
      }
    >
      <Text
        accessibilityElementsHidden={true}
        accessible={false}
        allowFontScaling={true}
        collapsable={false}
        ellipsizeMode="tail"
        importantForAccessibility="no-hide-descendants"
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "color": "rgba(11, 62, 227, 1)",
            },
          }
        }
        jestInlineStyle={
          [
            {
              "textAlign": "auto",
            },
            {
              "color": "#0B3EE3",
            },
          ]
        }
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          [
            {},
            {
              "color": undefined,
              "fontFamily": "Titillio",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "600",
              "lineHeight": 20,
            },
            [
              {
                "textAlign": "auto",
              },
              {
                "color": "#0B3EE3",
              },
              {
                "color": "rgba(11, 62, 227, 1)",
              },
            ],
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test Buttons Components - Experimental Enabled ButtonOutline Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "auto",
      "flexShrink": 1,
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(9, 50, 182, 0)",
          "borderColor": "rgba(11, 62, 227, 1)",
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "overflow": "hidden",
          "textAlignVertical": "center",
        },
        {
          "paddingHorizontal": 24,
        },
        {
          "backgroundColor": "rgba(9,50,182,0)",
          "borderColor": "#0B3EE3",
          "borderRadius": 8,
          "borderWidth": 2,
          "height": 48,
        },
        {},
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "overflow": "hidden",
          "textAlignVertical": "center",
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        {
          "backgroundColor": "rgba(9, 50, 182, 0)",
          "borderColor": "rgba(11, 62, 227, 1)",
        },
        {
          "paddingHorizontal": 24,
        },
        {
          "backgroundColor": "rgba(9,50,182,0)",
          "borderColor": "#0B3EE3",
          "borderRadius": 8,
          "borderWidth": 2,
          "height": 48,
        },
        {},
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          {
            "columnGap": 8,
          },
          false,
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          {
            "columnGap": 8,
          },
          false,
        ]
      }
    >
      <Text
        accessibilityElementsHidden={true}
        accessible={false}
        allowFontScaling={true}
        collapsable={false}
        ellipsizeMode="tail"
        importantForAccessibility="no-hide-descendants"
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "color": "rgba(11, 62, 227, 1)",
            },
          }
        }
        jestInlineStyle={
          [
            {
              "textAlign": "auto",
            },
            {
              "color": "#0B3EE3",
            },
          ]
        }
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          [
            {},
            {
              "color": undefined,
              "fontFamily": "Titillio",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "600",
              "lineHeight": undefined,
            },
            [
              {
                "textAlign": "auto",
              },
              {
                "color": "#0B3EE3",
              },
              {
                "color": "rgba(11, 62, 227, 1)",
              },
            ],
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test Buttons Components - Experimental Enabled ButtonSolid Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "auto",
      "flexShrink": 1,
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(11, 62, 227, 1)",
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "overflow": "hidden",
          "textAlignVertical": "center",
        },
        {
          "paddingHorizontal": 24,
        },
        {
          "backgroundColor": "#0B3EE3",
          "borderColor": "#FFFFFF",
          "borderRadius": 8,
          "borderWidth": 0,
          "height": 48,
        },
        {},
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "overflow": "hidden",
          "textAlignVertical": "center",
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        {
          "backgroundColor": "rgba(11, 62, 227, 1)",
        },
        {
          "paddingHorizontal": 24,
        },
        {
          "backgroundColor": "#0B3EE3",
          "borderColor": "#FFFFFF",
          "borderRadius": 8,
          "borderWidth": 0,
          "height": 48,
        },
        {},
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          {
            "columnGap": 8,
          },
          false,
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          {
            "columnGap": 8,
          },
          false,
        ]
      }
    >
      <Text
        accessibilityElementsHidden={true}
        accessible={false}
        allowFontScaling={true}
        collapsable={false}
        ellipsizeMode="tail"
        importantForAccessibility="no-hide-descendants"
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "color": "rgba(255, 255, 255, 1)",
            },
          }
        }
        jestInlineStyle={
          [
            {
              "textAlign": "auto",
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          [
            {},
            {
              "color": undefined,
              "fontFamily": "Titillio",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "600",
              "lineHeight": undefined,
            },
            [
              {
                "textAlign": "auto",
              },
              {
                "color": "#FFFFFF",
              },
              {
                "color": "rgba(255, 255, 255, 1)",
              },
            ],
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test Buttons Components - Experimental Enabled IconButton Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={8}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "height": 24,
          "width": 24,
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "height": 24,
          "width": 24,
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      ]
    }
  >
    <RNSVGSvgView
      accessibilityElementsHidden={true}
      accessibilityLabel=""
      accessible={false}
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      collapsable={false}
      color="#0B3EE3"
      focusable={false}
      height={24}
      importantForAccessibility="no-hide-descendants"
      jestAnimatedProps={
        {
          "value": {
            "color": "rgba(11, 62, 227, 1)",
          },
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      meetOrSlice={0}
      minX={0}
      minY={0}
      pointerEvents="none"
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={24}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M12 24c6.629 0 12-5.371 12-12S18.629 0 12 0C5.375 0 0 5.371 0 12s5.375 12 12 12Zm.033-10.97c-.997 0-1.818-.336-2.463-1.014-.646-.674-.968-1.51-.968-2.507 0-1.001.322-1.83.964-2.492.64-.662 1.458-.992 2.458-.992.997 0 1.81.334 2.435 1.017.625.678.94 1.51.94 2.511 0 .993-.315 1.822-.94 2.484-.625.657-1.43.992-2.426.992Zm-3.431 4.905c0-1.001.322-1.83.96-2.492.64-.662 1.458-.992 2.467-.992.996 0 1.809.335 2.43 1.017.625.682.94 1.515.94 2.512l-6.797-.045Z"
          fill={
            {
              "type": 2,
            }
          }
          fillRule={0}
          propList={
            [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Test Buttons Components - Experimental Enabled IconButtonContained Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "flex-start",
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(11, 62, 227, 0)",
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "borderRadius": 48,
          "height": 48,
          "width": 48,
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "borderRadius": 48,
          "height": 48,
          "width": 48,
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        {
          "backgroundColor": "rgba(11, 62, 227, 0)",
        },
      ]
    }
  >
    <RNSVGSvgView
      accessibilityElementsHidden={true}
      accessibilityLabel=""
      accessible={false}
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      collapsable={false}
      color="#0B3EE3"
      focusable={false}
      height={24}
      importantForAccessibility="no-hide-descendants"
      jestAnimatedProps={
        {
          "value": {
            "color": "rgba(11, 62, 227, 1)",
          },
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      meetOrSlice={0}
      minX={0}
      minY={0}
      pointerEvents="none"
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={24}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M12 24c6.629 0 12-5.371 12-12S18.629 0 12 0C5.375 0 0 5.371 0 12s5.375 12 12 12Zm.033-10.97c-.997 0-1.818-.336-2.463-1.014-.646-.674-.968-1.51-.968-2.507 0-1.001.322-1.83.964-2.492.64-.662 1.458-.992 2.458-.992.997 0 1.81.334 2.435 1.017.625.678.94 1.51.94 2.511 0 .993-.315 1.822-.94 2.484-.625.657-1.43.992-2.426.992Zm-3.431 4.905c0-1.001.322-1.83.96-2.492.64-.662 1.458-.992 2.467-.992.996 0 1.809.335 2.43 1.017.625.682.94 1.515.94 2.512l-6.797-.045Z"
          fill={
            {
              "type": 2,
            }
          }
          fillRule={0}
          propList={
            [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Test Buttons Components - Experimental Enabled IconButtonSolid Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "flex-start",
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(11, 62, 227, 1)",
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "borderRadius": 56,
          "height": 56,
          "width": 56,
        },
        {
          "backgroundColor": "#0B3EE3",
        },
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "borderRadius": 56,
          "height": 56,
          "width": 56,
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        {
          "backgroundColor": "rgba(11, 62, 227, 1)",
        },
        {
          "backgroundColor": "#0B3EE3",
        },
      ]
    }
  >
    <RNSVGSvgView
      accessibilityElementsHidden={true}
      accessibilityLabel=""
      accessible={false}
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      color="#FFFFFF"
      focusable={false}
      height={24}
      importantForAccessibility="no-hide-descendants"
      meetOrSlice={0}
      minX={0}
      minY={0}
      pointerEvents="none"
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={24}
      vbWidth={24}
      width={24}
    >
      <RNSVGGroup
        fill={
          {
            "payload": 4278190080,
            "type": 0,
          }
        }
      >
        <RNSVGPath
          clipRule={0}
          d="M12 24c6.629 0 12-5.371 12-12S18.629 0 12 0C5.375 0 0 5.371 0 12s5.375 12 12 12Zm.033-10.97c-.997 0-1.818-.336-2.463-1.014-.646-.674-.968-1.51-.968-2.507 0-1.001.322-1.83.964-2.492.64-.662 1.458-.992 2.458-.992.997 0 1.81.334 2.435 1.017.625.678.94 1.51.94 2.511 0 .993-.315 1.822-.94 2.484-.625.657-1.43.992-2.426.992Zm-3.431 4.905c0-1.001.322-1.83.96-2.492.64-.662 1.458-.992 2.467-.992.996 0 1.809.335 2.43 1.017.625.682.94 1.515.94 2.512l-6.797-.045Z"
          fill={
            {
              "type": 2,
            }
          }
          fillRule={0}
          propList={
            [
              "fill",
              "fillRule",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`Test Buttons Components ButtonLink Snapshot 1`] = `
<View
  accessibilityLabel="label"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  hitSlop={
    {
      "bottom": 14,
      "left": 24,
      "right": 24,
      "top": 14,
    }
  }
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "flex-start",
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "overflow": "hidden",
          "textAlignVertical": "center",
        },
        {
          "paddingHorizontal": 0,
        },
        {
          "backgroundColor": "transparent",
          "borderColor": "#0B3EE3",
          "borderRadius": 8,
          "borderWidth": 0,
          "height": undefined,
        },
        {},
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "overflow": "hidden",
          "textAlignVertical": "center",
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        {},
        {
          "paddingHorizontal": 0,
        },
        {
          "backgroundColor": "transparent",
          "borderColor": "#0B3EE3",
          "borderRadius": 8,
          "borderWidth": 0,
          "height": undefined,
        },
        {},
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          {
            "columnGap": 8,
          },
          false,
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          {
            "columnGap": 8,
          },
          false,
        ]
      }
    >
      <Text
        accessibilityElementsHidden={true}
        accessible={false}
        allowFontScaling={true}
        collapsable={false}
        ellipsizeMode="tail"
        importantForAccessibility="no-hide-descendants"
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "color": "rgba(11, 62, 227, 1)",
            },
          }
        }
        jestInlineStyle={
          [
            {
              "textAlign": "auto",
            },
            {
              "color": "#0B3EE3",
            },
          ]
        }
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          [
            {},
            {
              "color": undefined,
              "fontFamily": "Titillio",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "600",
              "lineHeight": 20,
            },
            [
              {
                "textAlign": "auto",
              },
              {
                "color": "#0B3EE3",
              },
              {
                "color": "rgba(11, 62, 227, 1)",
              },
            ],
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test Buttons Components ButtonOutline Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "auto",
      "flexShrink": 1,
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(9, 50, 182, 0)",
          "borderColor": "rgba(11, 62, 227, 1)",
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "overflow": "hidden",
          "textAlignVertical": "center",
        },
        {
          "paddingHorizontal": 24,
        },
        {
          "backgroundColor": "rgba(9,50,182,0)",
          "borderColor": "#0B3EE3",
          "borderRadius": 8,
          "borderWidth": 2,
          "height": 48,
        },
        {},
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "overflow": "hidden",
          "textAlignVertical": "center",
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        {
          "backgroundColor": "rgba(9, 50, 182, 0)",
          "borderColor": "rgba(11, 62, 227, 1)",
        },
        {
          "paddingHorizontal": 24,
        },
        {
          "backgroundColor": "rgba(9,50,182,0)",
          "borderColor": "#0B3EE3",
          "borderRadius": 8,
          "borderWidth": 2,
          "height": 48,
        },
        {},
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          {
            "columnGap": 8,
          },
          false,
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          {
            "columnGap": 8,
          },
          false,
        ]
      }
    >
      <Text
        accessibilityElementsHidden={true}
        accessible={false}
        allowFontScaling={true}
        collapsable={false}
        ellipsizeMode="tail"
        importantForAccessibility="no-hide-descendants"
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "color": "rgba(11, 62, 227, 1)",
            },
          }
        }
        jestInlineStyle={
          [
            {
              "textAlign": "auto",
            },
            {
              "color": "#0B3EE3",
            },
          ]
        }
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          [
            {},
            {
              "color": undefined,
              "fontFamily": "Titillio",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "600",
              "lineHeight": undefined,
            },
            [
              {
                "textAlign": "auto",
              },
              {
                "color": "#0B3EE3",
              },
              {
                "color": "rgba(11, 62, 227, 1)",
              },
            ],
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test Buttons Components ButtonSolid Snapshot 1`] = `
<View
  accessibilityLabel="accessibilityLabel"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignSelf": "auto",
      "flexShrink": 1,
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {
          "backgroundColor": "rgba(11, 62, 227, 1)",
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
      }
    }
    jestInlineStyle={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "overflow": "hidden",
          "textAlignVertical": "center",
        },
        {
          "paddingHorizontal": 24,
        },
        {
          "backgroundColor": "#0B3EE3",
          "borderColor": "#FFFFFF",
          "borderRadius": 8,
          "borderWidth": 0,
          "height": 48,
        },
        {},
      ]
    }
    style={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "elevation": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "overflow": "hidden",
          "textAlignVertical": "center",
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        {
          "backgroundColor": "rgba(11, 62, 227, 1)",
        },
        {
          "paddingHorizontal": 24,
        },
        {
          "backgroundColor": "#0B3EE3",
          "borderColor": "#FFFFFF",
          "borderRadius": 8,
          "borderWidth": 0,
          "height": 48,
        },
        {},
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          {
            "columnGap": 8,
          },
          false,
        ]
      }
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          {
            "columnGap": 8,
          },
          false,
        ]
      }
    >
      <Text
        accessibilityElementsHidden={true}
        accessible={false}
        allowFontScaling={true}
        collapsable={false}
        ellipsizeMode="tail"
        importantForAccessibility="no-hide-descendants"
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "color": "rgba(255, 255, 255, 1)",
            },
          }
        }
        jestInlineStyle={
          [
            {
              "textAlign": "auto",
            },
            {
              "color": "#FFFFFF",
            },
          ]
        }
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          [
            {},
            {
              "color": undefined,
              "fontFamily": "Titillio",
              "fontSize": 16,
              "fontStyle": "normal",
              "fontWeight": "600",
              "lineHeight": undefined,
            },
            [
              {
                "textAlign": "auto",
              },
              {
                "color": "#FFFFFF",
              },
              {
                "color": "rgba(255, 255, 255, 1)",
              },
            ],
          ]
        }
      >
        label
      </Text>
    </View>
  </View>
</View>
`;
